@startuml clasesDiseño

hide circle
hide empty members

skinparam defaultFontName Arial
skinparam defaultFontSize 10
skinparam classBorderThickness 1.5
skinparam arrowThickness 1.2
skinparam arrowColor #444444
skinparam backgroundColor #FFFFFF

skinparam class {
  BackgroundColor<<modelo>>  #d5ecd4
  BorderColor<<modelo>>      #2e7d32
  BackgroundColor<<accion>>  #dce8f5
  BorderColor<<accion>>      #2d6a9f
}

title Clases de diseño principales

package "Modelo  —  src/lib/db/schema.ts" {

  class "profiles" <<modelo>> {
    role: admin | manager | hr | employee
    entityId · managerId
  }

  class "entities" <<modelo>> {
    name · shortCode · isActive
  }

  class "spots" <<modelo>> {
    label · type · resourceType
    assignedTo (opcional)
  }

  class "reservations" <<modelo>> {
    date · status
    startTime · endTime (franjas opcionales)
  }

  class "cessions" <<modelo>> {
    date
    status: available | reserved | cancelled
  }

  class "leave_requests" <<modelo>> {
    leaveType · startDate · endDate
    status (flujo de aprobación multinivel)
    managerId · hrId
  }

  class "visitor_reservations" <<modelo>> {
    date · visitorName · visitorEmail
    notificationSent: boolean
  }

  class "announcements" <<modelo>> {
    title · body · entityId
    publishedAt · expiresAt
  }
}

package "Capa de acción  —  Server Actions" {

  class "actionClient" <<accion>> {
    schema(zod: ZodType<T>)
    action(handler): ServerAction<T>
  }

  class "ActionResult<T>" <<accion>> {
    success: true  → data: T
    success: false → error · fieldErrors
  }

  class "buildCessionActions(cfg)" <<accion>> {
    cfg: resourceType · noun · basePath
    ─────────────────────────────
    createCession(): ActionResult
    cancelCession(): ActionResult
  }
}

' ── Relaciones del modelo ─────────────────────────────────────
profiles             "N" --o "1" entities          : pertenece a >
spots                "N" --o "1" entities          : pertenece a >
spots                "0..1" --o "1" profiles       : < asignada a
reservations         "N" --> "1" spots             : ocupa >
reservations         "N" --> "1" profiles          : realizada por >
cessions             "N" --> "1" spots             : cede >
cessions             "N" --> "1" profiles          : propietario >
leave_requests       "N" --> "1" profiles          : solicita >
visitor_reservations "N" --> "1" spots             : ocupa >

' ── Relaciones de acción ──────────────────────────────────────
actionClient        ..> ActionResult      : produce >
buildCessionActions ..> actionClient      : usa >

@enduml
